# platform.core.uifw.libtdm

./: .gitignore  COPYING  Makefile.am  README  configure.ac  libtdm.pc.in  project.config  tdm-test
android/: how_to_deploy.txt  libtdm-1.3.0.spec
client/: Makefile.am  libtdm-client.pc.in  tdm_client.c  tdm_client.h  tdm_client_types.h  tdm_dbg.c  tdm_monitor.c
common/: Makefile.am  tdm_log.c
doc/: Doxyfile  tdm_doc.h  tdm_doc.h.in
include/: Makefile.am  tdm.h  tdm_backend.h  tdm_common.h  tdm_helper.h  tdm_list.h  tdm_log.h  tdm_types.h
packaging/: libtdm.spec
protocol/: Makefile.am  tdm.xml
service/: tdm-socket-user.service  tdm-socket.service
src/: Makefile.am  tdm.c  tdm_backend.c  tdm_buffer.c  tdm_capture.c  tdm_dbg_server.c  tdm_display.c  tdm_event.c  tdm_event_loop.c  tdm_helper.c  tdm_macro.h  tdm_monitor_server.c  tdm_pp.c  tdm_private.h  tdm_server.c  tdm_thread.c  tdm_vblank.c
tools/: Makefile.am  buffers.c  buffers.h  tdm-test-buffer.c  tdm-test-display.c  tdm-test-output.c  tdm-test-pp.c  tdm-test.c  tdm-test.h  tdm_test_client.c  tdm_test_client.c.BACKUP.c  tdm_test_client.c.BASE.c  tdm_test_client.c.REMOTE.c  tdm_test_server.c
